TestSuite/errors/err0275.pas
type TClass = static class
class f: TClass;
end;

begin
  
end.